--- a/Module_1/app/scss/_variables.scss
+++ b/Module_1/app/scss/_variables.scss
@@ -1,4 +1,4 @@
-/*   Header   */
+//Header
 
 $color-header-top: #1c1c1c;
 $color-logo-circle: #d54346;
@@ -9,5 +9,8 @@ $color-logo-line: #b2b2b2;
 $color-white: #ffffff;
 $color-search-input: #dddddd;
 
+// Navigation
 
-
+$color-menu-items-border: #c9c9c9;
+$color-menu-link: #999999;
+$color-social-hover: #ee802f;
