--- a/Module_1/app/scss/_fonts.scss
+++ b/Module_1/app/scss/_fonts.scss
@@ -24,3 +24,14 @@
   font-weight: 700;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'icomoon';
+  src: url('../fonts/icomoon/icomoon.eot') format('embedded-opentype'),
+  url('../fonts/icomoon/icomoon.ttf') format('truetype'),
+  url('../fonts/icomoon/icomoon.woff') format('woff'),
+  url('../fonts/icomoon/icomoon.svg') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
