--- a/Module_1/app/scss/_variables.scss
+++ b/Module_1/app/scss/_variables.scss
@@ -14,3 +14,10 @@ $color-search-input: #dddddd;
 $color-menu-items-border: #c9c9c9;
 $color-menu-link: #999999;
 $color-social-hover: #ee802f;
+
+// Slider
+
+$color-overlay: #0f0f0f;
+$color-slider-text: #bfbfbf;
+$color-circle: #cecece;
+$color-circle-active: #353535
