--- a/Module_1/app/scss/_variables.scss
+++ b/Module_1/app/scss/_variables.scss
@@ -20,4 +20,10 @@ $color-social-hover: #ee802f;
 $color-overlay: #0f0f0f;
 $color-slider-text: #bfbfbf;
 $color-circle: #cecece;
-$color-circle-active: #353535
+$color-circle-active: #353535;
+
+//TEAM
+
+$color-team-title: #4a4a4a;
+$color-team-img: #e2e2e2;
+$color-team-bottom-line: #e8e8e8;
