--- a/Module_1/app/scss/_slider.scss
+++ b/Module_1/app/scss/_slider.scss
@@ -44,7 +44,7 @@
 
 .controls {
   text-align: center;
-  margin: 14px 0 50px;
+  margin: 14px 0 5%;
   &__circle {
     display: inline-block;
     width: 12px;
@@ -53,7 +53,7 @@
     margin-right: 10px;
     border-radius: 50%;
     &.active {
-      border: 1px solid $color-circle-active;
+      border: 2px solid $color-circle-active;
       background-color: $color-white;
     }
   }
