--- a/Module_1/app/scss/_variables.scss
+++ b/Module_1/app/scss/_variables.scss
@@ -1,4 +1,4 @@
-//Header
+//HEADER
 
 $color-header-top: #1c1c1c;
 $color-logo-circle: #d54346;
@@ -9,13 +9,13 @@ $color-logo-line: #b2b2b2;
 $color-white: #ffffff;
 $color-search-input: #dddddd;
 
-// Navigation
+// NAVIGATION
 
 $color-menu-items-border: #c9c9c9;
 $color-menu-link: #999999;
 $color-social-hover: #ee802f;
 
-// Slider
+// SLIDER
 
 $color-overlay: #0f0f0f;
 $color-slider-text: #bfbfbf;
@@ -27,3 +27,7 @@ $color-circle-active: #353535;
 $color-team-title: #4a4a4a;
 $color-team-img: #e2e2e2;
 $color-team-bottom-line: #e8e8e8;
+
+//WORK
+
+$color-work-title: #d44346;
