--- a/Module_1/app/scss/_navigation.scss
+++ b/Module_1/app/scss/_navigation.scss
@@ -33,7 +33,7 @@
     display: none;
     position: absolute;
     top: 50px;
-    left: 20px;
+    left: 10px;
     flex-direction: column;
     align-items: flex-start;
   }
@@ -42,24 +42,28 @@
     padding: 0 15px;
     border-right: 1px solid $color-menu-items-border;
     transition: all 0.3s ease;
+    background-color: $color-logo-part1;
+    z-index: 1;
     &:hover {
       @media screen and (max-width: 840px) {
         border-color: $color-social-hover;
       }
     }
-    @media screen and (max-width: 840px) {
-      border-right: none;
-      border-bottom: 1px solid $color-menu-items-border;
-      margin-bottom: 5px;
-      padding: 0;
-      width: 100%;
-    }
     &:first-child {
       padding-left: 0;
+      @media screen and (max-width: 840px) {
+        padding-left: 10px;
+      }
     }
     &:last-child {
       border-right: none;
       padding-right: 0;
+    }
+    @media screen and (max-width: 840px) {
+      border-right: none;
+      border-bottom: 1px solid $color-menu-items-border;
+      padding: 5px 10px;
+      width: 100%;
     }
     & > a {
       display: block;
