--- a/Module_1/app/scss/_variables.scss
+++ b/Module_1/app/scss/_variables.scss
@@ -31,3 +31,11 @@ $color-team-bottom-line: #e8e8e8;
 //WORK
 
 $color-work-title: #d44346;
+
+//FOOTER
+
+$color-footer-top: #871f21;
+$color-footer-link: #631618;
+$color-footer-links-bottom: #d85255;
+$color-footer-form: #807d77;
+$color-footer-line: #b7282c;
