--- a/Module_1/app/scss/_team.scss
+++ b/Module_1/app/scss/_team.scss
@@ -8,6 +8,7 @@
     line-height: 1.5em;
     @media screen and(max-width: 660px) {
       font-size: 3rem;
+      margin-bottom: 10px;
     }
   }
   &__text {
